module 10 global edits

--- a/html-css/module_10/index.html
+++ b/html-css/module_10/index.html
@@ -4,10 +4,238 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Модуль 10</title>
+    <link rel="stylesheet" href="./style/normalize.css">
     <link rel="stylesheet" href="./style/My_normalize.css">
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    Hello world!!!
+    <header class="main_head">
+        <div class="head_block container">
+            <h3 class="logo">
+                <a href="#" class="logo__link">MoGo</a>
+            </h3>
+            <nav class="nav_menu">
+                <ul class="link_list">
+                    <li class="link_list__item">
+                        <a href="#" class="nav_link">about</a>
+                    </li>
+                    <li class="link_list__item">
+                        <a href="#" class="nav_link">service</a>
+                    </li>
+                    <li class="link_list__item">
+                        <a href="#" class="nav_link">work</a>
+                    </li>
+                    <li class="link_list__item">
+                        <a href="#" class="nav_link">blog</a>
+                    </li>
+                    <li class="link_list__item">
+                        <a href="#" class="nav_link">contact</a>
+                    </li>
+                </ul>
+                <ul class="sl_list">
+                    <li class="sl_list__item">
+                        <a href="#" class="i_link"> 
+                            <svg height="512pt" viewBox="0 -31 512 512" xmlns="http://www.w3.org/2000/svg" class="i_link__icon i_link__icon--hover">
+                                <path d="M164.96 300.004h.024c.02 0 .04-.004.059-.004H437a15.003 15.003 0 0 0 14.422-10.879l60-210a15.003 15.003 0 0 0-2.445-13.152A15.006 15.006 0 0 0 497 60H130.367l-10.722-48.254A15.003 15.003 0 0 0 105 0H15C6.715 0 0 6.715 0 15s6.715 15 15 15h77.969c1.898 8.55 51.312 230.918 54.156 243.71C131.184 280.64 120 296.536 120 315c0 24.812 20.188 45 45 45h272c8.285 0 15-6.715 15-15s-6.715-15-15-15H165c-8.27 0-15-6.73-15-15 0-8.258 6.707-14.977 14.96-14.996zM477.114 90l-51.43 180H177.032l-40-180zm0 0M150 405c0 24.813 20.188 45 45 45s45-20.188 45-45-20.188-45-45-45-45 20.188-45 45zm45-15c8.27 0 15 6.73 15 15s-6.73 15-15 15-15-6.73-15-15 6.73-15 15-15zm0 0M362 405c0 24.813 20.188 45 45 45s45-20.188 45-45-20.188-45-45-45-45 20.188-45 45zm45-15c8.27 0 15 6.73 15 15s-6.73 15-15 15-15-6.73-15-15 6.73-15 15-15zm0 0"/>
+                            </svg>
+                        </a>   
+                    </li>
+                    <li class="sl_list__item">
+                        <a href="#" class="i_link"> 
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 56.966 56.966" class="i_link__icon i_link__icon--hover">
+                                <path d="M55.146 51.887L41.588 37.786A22.926 22.926 0 0 0 46.984 23c0-12.682-10.318-23-23-23s-23 10.318-23 23 10.318 23 23 23c4.761 0 9.298-1.436 13.177-4.162l13.661 14.208c.571.593 1.339.92 2.162.92.779 0 1.518-.297 2.079-.837a3.004 3.004 0 0 0 .083-4.242zM23.984 6c9.374 0 17 7.626 17 17s-7.626 17-17 17-17-7.626-17-17 7.626-17 17-17z"/>
+                            </svg>
+                        </a>    
+                    </li >
+                </ul>
+            </nav>
+        </div>
+        </nav>
+    </header>
+    <main>
+        <section class="container">
+            <div class="headline">
+                <h3 class="headline_first">We work with</h3>
+                <h2 class="headline_second">Amazing Services</h2>
+            </div>
+            <ul class="card_list">
+                <li>
+                    <article class="card_item">
+                        <div class="card_icon" style="background-image: url(./img/card/1.png)"></div>
+                        <div class="card_container">
+                            <h4 class="card_title" src-img="../img/card/1.png">photograhy</h4>
+                            <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
+                </li>
+                <li>
+                    <article class="card_item">
+                        <div class="card_icon" style="background-image: url(./img/card/2.png)"></div>
+                        <div class="card_container">
+                            <h4 class="card_title">web disign</h4>
+                            <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
+                </li>
+                <li>
+                    <article class="card_item">
+                        <div class="card_icon" style="background-image: url(./img/card/3.png)"></div>
+                        <div class="card_container">
+                            <h4 class="card_title">creativity</h4>
+                            <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
+                </li>
+                <li>
+                    <article class="card_item">
+                        <div class="card_icon" style="background-image: url(./img/card/4.png)"></div>
+                        <div class="card_container">
+                            <h4 class="card_title">seo</h4>
+                            <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
+                </li>
+                <li>
+                    <article class="card_item">
+                        <div class="card_icon" style="background-image: url(./img/card/5.png)"></div>
+                        <div class="card_container">
+                            <h4 class="card_title">css/html</h4>
+                            <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
+                </li>
+                <li>
+                    <article class="card_item">
+                        <div class="card_icon" style="background-image: url(./img/card/6.png)"></div>
+                        <div class="card_container">
+                            <h4 class="card_title">digital</h4>
+                            <p class="card_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Quod quia perferendis voluptatem!</p>
+                        </div>
+                    </article>
+                </li>
+            </ul>
+        </section>
+        <section class="container">
+            <div class="headline">
+                <h3 class="headline_first">Who we are</h3>
+                <h2 class="headline_second">Meet our team</h2>
+                <p class="headline_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Ea rerum accusantium eius? Fugiat aspernatur veniam molestiae magni magnam,
+                ratione pariatur?</p>
+            </div>
+            <ul class="team_list">
+                <li>
+                    <article class="team_items">
+                        <div class="team_modal">
+                            <ul class="team_m_list">
+                                <li class="team_m_item">
+                                    <a class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                                <li class="team_m_item">
+                                    <a class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li class="team_m_item">
+                                    <a class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-pinterest-p"></i>
+                                    </a>
+                                </li>
+                                <li class="team_m_item">
+                                    <a class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <img src="./img/team/1.jpg" alt="1.jpg" class="team_img" width="380" height="470">
+                        <h4 class="team_name">Matthew dix</h4>
+                        <p class="team_profession">Grafic Design</p>
+                    </article>
+                </li>
+                <li>
+                    <article class="team_items">
+                        <div class="team_modal">
+                            <ul class="team_m_list">
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </button>
+                                </li>
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-twitter"></i>
+                                    </button>
+                                </li>
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-pinterest-p"></i>
+                                    </button>
+                                </li>
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-instagram"></i>
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                        <img src="./img/team/2.jpg" alt="2.jpg" class="team_img" width="380" height="470">
+                        <h4 class="team_name">Christopher Campbell</h4>
+                        <p class="team_profession">Branding/UX design</p>
+                    </article>
+                </li>
+                <li>
+                    <article class="team_items">
+                        <div class="team_modal">
+                            <ul class="team_m_list">
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </button>
+                                </li>
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-twitter"></i>
+                                    </button>
+                                </li>
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-pinterest-p"></i>
+                                    </button>
+                                </li>
+                                <li class="team_m_item">
+                                    <button class="team_m_btn" style="font-size: 20px">
+                                        <i class="fab fa-instagram"></i>
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                        <img src="./img/team/3.jpg" alt="3.jpg" class="team_img" width="380" height="470">
+                        <h4 class="team_name">Michael Fertig</h4>
+                        <p class="team_profession">Developer</p>
+                    </article>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <div class="footer container">
+            <p class="foot_text">© 2016 MoGo free PSD template by 
+                <a class="foot_link" href="#" target="_blank">Laaqiq</a>
+            </p>
+            <div class="subscripe_wrapper">      
+                <input type="email" placeholder="Your Email...">
+                <input type="submit" value="Subscribe">
+            </div>
+        </div> 
+    </footer>
 </body>
 </html>
