module 10 change button

--- a/html-css/module_10/index.html
+++ b/html-css/module_10/index.html
@@ -53,7 +53,7 @@
         <div class="headline headline--change_color container">
             <h3 class="headline__first headline__first--resize">Creative Template</h3>
             <h2 class="headline__second headline__second--resize">Welcom<br>to mogo</h2>
-            <input type="button" value="Find your holiday partner" class="headline__button">
+            <input type="button" value="Learn more" class="headline__button">
         </div>
     </header>
     <main>
