module 9 edit container

--- a/html-css/module_09/index.html
+++ b/html-css/module_09/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <div class="head_block container">
-            <div class="row justify-content-between align-items-center">
+        <div class="container">
+            <div class="head_block row justify-content-between align-items-center">
                 <div class="col-12 order-2 col-md-6 order-md-1">
                     <a href="#" class="logo text-md-left">URLAUBSGLÜCK</a>
                 </div>
@@ -24,12 +24,11 @@
                     </ul>
                 </div>
             </div>
-        </div>
-
-        <div class="row main_block">
-            <h2 class="col-12 m_b_title">Share your <br> holiday dreams</h2>
-            <p class="col-12 m_b_text">And find the perfect partner to fullfill it</p>
-            <input type="col-12 m_b_button" value="Find your holiday partner" class="m_b_button">
+            <div class="row main_block">
+                <h2 class="col-12 m_b_title">Share your <br> holiday dreams</h2>
+                <p class="col-12 m_b_text">And find the perfect partner to fullfill it</p>
+                <input type="col-12 m_b_button" value="Find your holiday partner" class="m_b_button">
+            </div>
         </div>
     </header>
     <main>
