module 10 fix cod

--- a/html-css/module_10/index.html
+++ b/html-css/module_10/index.html
@@ -6,6 +6,7 @@
     <title>Модуль 10</title>
     <link rel="stylesheet" href="./style/normalize.css">
     <link rel="stylesheet" href="./style/My_normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
