module 10 add footer block

--- a/html-css/module_10/index.html
+++ b/html-css/module_10/index.html
@@ -254,9 +254,9 @@
             <p class="footer__text">© 2016 MoGo free PSD template by 
                 <a class="text__link" href="#" target="_blank">Laaqiq</a>
             </p>
-            <div class="subscripe_wrapper">      
-                <input type="email" placeholder="Your Email...">
-                <input type="submit" value="Subscribe">
+            <div class="subscripe_menu">      
+                <input type="email" placeholder="Your Email..." class="subscripe_menu__email">
+                <input type="submit" value="Subscribe" class="subscripe_menu__submit">
             </div>
         </div> 
     </footer>
