module 10 global edits2

--- a/html-css/module_10/index.html
+++ b/html-css/module_10/index.html
@@ -36,7 +36,7 @@
                 <ul class="sl_list">
                     <li class="sl_list__item">
                         <a href="#" class="i_link"> 
-                            <svg height="512pt" viewBox="0 -31 512 512" xmlns="http://www.w3.org/2000/svg" class="i_link__icon i_link__icon--hover">
+                            <svg height="512pt" viewbox="0 -31 512 512" xmlns="http://www.w3.org/2000/svg" class="i_link__icon i_link__icon--hover">
                                 <path d="M164.96 300.004h.024c.02 0 .04-.004.059-.004H437a15.003 
                                 15.003 0 0 0 14.422-10.879l60-210a15.003 15.003 0 0 0-2.445-13.152A15.006 
                                 15.006 0 0 0 497 60H130.367l-10.722-48.254A15.003 15.003 0 0 0 105 
@@ -54,7 +54,7 @@
                     </li>
                     <li class="sl_list__item">
                         <a href="#" class="i_link"> 
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 56.966 56.966" class="i_link__icon i_link__icon--hover">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 56.966 56.966" class="i_link__icon i_link__icon--hover">
                                 <path d="M55.146 51.887L41.588 37.786A22.926 22.926 0 0 0 46.984 
                                 23c0-12.682-10.318-23-23-23s-23 10.318-23 23 10.318 23 23 23c4.761 
                                 0 9.298-1.436 13.177-4.162l13.661 14.208c.571.593 1.339.92 2.162.92.779 
@@ -121,7 +121,7 @@
                 <li class="card_list__item_wrap">
                     <article class="card_item">
                         <div class="card_container card_container--before icon-1">
-                            <h4 class="card_container__title" src-img="../img/card/1.png">photograhy</h4>
+                            <h4 class="card_container__title">photograhy</h4>
                             <p class="card_container__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                                 Quod quia perferendis voluptatem!</p>
                         </div>
@@ -189,28 +189,28 @@
                             <ul class="team_m_list">
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
-                                        <svg class="i_link__icon i_link__icon--resize_red">
+                                        <svg class="social_icon">
                                             <use xlink:href="./img/icon/sprites.svg#facebook"></use>
                                         </svg>
                                     </a> 
                                 </li>
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
-                                        <svg class="i_link__icon i_link__icon--resize_red">
+                                        <svg class="social_icon">
                                             <use xlink:href="./img/icon/sprites.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
-                                        <svg class="i_link__icon i_link__icon--resize_red">
+                                        <svg class="social_icon">
                                             <use xlink:href="./img/icon/sprites.svg#pinterest"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
-                                        <svg class="i_link__icon i_link__icon--resize_red">
+                                        <svg class="social_icon">
                                             <use xlink:href="./img/icon/sprites.svg#instagram"></use>
                                         </svg>
                                     </a>
@@ -228,28 +228,28 @@
                             <ul class="team_m_list">
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
-                                        <svg class="i_link__icon i_link__icon--resize_red">
+                                        <svg class="social_icon">
                                             <use xlink:href="./img/icon/sprites.svg#facebook"></use>
                                         </svg>
                                     </a> 
                                 </li>
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
-                                        <svg class="i_link__icon i_link__icon--resize_red">
+                                        <svg class="social_icon">
                                             <use xlink:href="./img/icon/sprites.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
-                                        <svg class="i_link__icon i_link__icon--resize_red">
+                                        <svg class="social_icon">
                                             <use xlink:href="./img/icon/sprites.svg#pinterest"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
-                                        <svg class="i_link__icon i_link__icon--resize_red">
+                                        <svg class="social_icon">
                                             <use xlink:href="./img/icon/sprites.svg#instagram"></use>
                                         </svg>
                                     </a>
@@ -267,28 +267,28 @@
                             <ul class="team_m_list">
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
-                                        <svg class="i_link__icon i_link__icon--resize_red">
+                                        <svg class="social_icon">
                                             <use xlink:href="./img/icon/sprites.svg#facebook"></use>
                                         </svg>
                                     </a> 
                                 </li>
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
-                                        <svg class="i_link__icon i_link__icon--resize_red">
+                                        <svg class="social_icon">
                                             <use xlink:href="./img/icon/sprites.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
-                                        <svg class="i_link__icon i_link__icon--resize_red">
+                                        <svg class="social_icon">
                                             <use xlink:href="./img/icon/sprites.svg#pinterest"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_m_list__item">
                                     <a href="#" class="item_link item_link--hover">
-                                        <svg class="i_link__icon i_link__icon--resize_red">
+                                        <svg class="social_icon">
                                             <use xlink:href="./img/icon/sprites.svg#instagram"></use>
                                         </svg>
                                     </a>
