module 10 global edits 5

--- a/html-css/module_10/index.html
+++ b/html-css/module_10/index.html
@@ -217,7 +217,12 @@
                                 </li>
                             </ul>
                         </div>
-                        <img src="./img/team/1.jpg" alt="1.jpg" class="team_items__img" width="380" height="470">
+                        <img
+                            src="./img/team/1-small.jpg"
+                            alt=""
+                            class="team_items__img"
+                            srcset="./img/team/1-small.jpg 1x,
+                                    ./img/team/1-large.jpg 2x"/>
                         <h4 class="team_items__name">Matthew dix</h4>
                         <p class="team_items__profession">Grafic Design</p>
                     </article>
@@ -256,7 +261,12 @@
                                 </li>
                             </ul>
                         </div>
-                        <img src="./img/team/2.jpg" alt="2.jpg" class="team_items__img" width="380" height="470">
+                        <img
+                            src="./img/team/2-small.jpg"
+                            alt=""
+                            class="team_items__img"
+                            srcset="./img/team/2-small.jpg 1x,
+                                    ./img/team/2-large.jpg 2x"/>
                         <h4 class="team_items__name">Christopher Campbell</h4>
                         <p class="team_items__profession">Branding/UX design</p>
                     </article>
@@ -295,7 +305,12 @@
                                 </li>
                             </ul>
                         </div>
-                        <img src="./img/team/3.jpg" alt="3.jpg" class="team_items__img" width="380" height="470">
+                         <img
+                            src="./img/team/3-small.jpg"
+                            alt=""
+                            class="team_items__img"
+                            srcset="./img/team/3-small.jpg 1x,
+                                    ./img/team/3-large.jpg 2x"/>
                         <h4 class="team_items__name">Michael Fertig</h4>
                         <p class="team_items__profession">Developer</p>
                     </article>
